--- a/style.css
+++ b/style.css
@@ -21,6 +21,31 @@ body {
     border-bottom: solid 1px #B0B0B0;
 }
 
+.quantity-container{
+    height: 100px;
+    width: 350px;
+    margin-top: 30px;
+    text-align: center;
+}
+
+.quantity-container p{
+    margin-top: unset
+}
+
+.quantity-toggle{
+    justify-content: space-between;
+    text-align: center;
+}
+
+.quantity-toggle button {
+    width: 100px;
+    height: 30px;
+    border-radius: 4px;
+    border: none;
+    background-color: #818384;
+    margin: 4px;
+}
+
 .tile-container {
     width: 330px;
     margin-bottom: 30px;
